--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,18 +34,34 @@ dependencies:
   firebase_core: ^2.3.0
   flutter:
     sdk: flutter
+  flutter_native_splash: ^2.2.16
   intl: ^0.17.0
 
 dev_dependencies:
-
-  # The "flutter_lints" package below contains a set of recommended lints to
-  # encourage good coding practices. The lint set provided by the package is
-  # activated in the `analysis_options.yaml` file located at the root of your
-  # package. See that file for information about deactivating specific lint
-  # rules and activating additional ones.
+  flutter_launcher_icons: ^0.11.0
   flutter_lints: ^2.0.0
   flutter_test:
     sdk: flutter
+
+flutter_native_splash:
+  android: true
+  ios: false
+  web: false
+
+  color: "#FFFFFF"
+  image: assets/images/brain.png
+  branding: assets/images/title.png
+  branding_mode: bottom
+
+  android_12:
+    color: "#FFFFFF"
+    image: assets/images/brain.png
+    branding: assets/images/title.png
+
+flutter_icons:
+  android: "launcher_icon"
+  ios: false
+  image_path: "assets/images/brain.png"
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
@@ -69,12 +85,12 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
-  #         style: italic
+  fonts:
+    - family: Comfortaa
+      fonts:
+        - asset: ./assets/fonts/Comfortaa-Regular.ttf
+        - asset: ./assets/fonts/Comfortaa-Bold.ttf
+          weight: 700
   #   - family: Trajan Pro
   #     fonts:
   #       - asset: fonts/TrajanPro.ttf
